--- a/source/layout.erb
+++ b/source/layout.erb
@@ -70,7 +70,9 @@
         </div>
       </div>
       <div id="content" class="has-sidebar">
+
         <div class="chapter">
+          <%= old_version_warning %>
           <%= chapter_heading %>
           <hr>
 
