Add warning about viewing an old version of the guides
Based on 676c867

Since this version of the guides will always be outdated, we do not
include the logic for detecting if viewing an old version.

--- a/source/layout.erb
+++ b/source/layout.erb
@@ -70,7 +70,17 @@
         </div>
       </div>
       <div id="content" class="has-sidebar">
+
         <div class="chapter">
+          <div class="old-version-warning">
+            <i class="icon-attention-circled"></i>
+            <strong>Old Guides - </strong>
+            You are viewing the guides for Ember v1.13.0
+            <a href="/" class="btn">
+              VIEW <span class='latest-version'>LATEST</span>
+            </a>
+          </div>
+
           <h1>
             <%= page_title %>
             <a href="https://github.com/emberjs/guides/edit/master/source/<%= current_page.path.gsub('html', 'md') %>"
